default/objects/Map_Member_User__c/fields/ManagerId__c.field-meta.xml
<CustomField>
    <fullName>ManagerId__c</fullName>
    <formula>User__r.ManagerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ManagerId</label>
    <type>Text</type>
</CustomField>