default/objects/Map_Member_User__c/fields/Relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Map</label>
    <referenceTo>Relationship_Map__c</referenceTo>
    <relationshipLabel>Map Member Users</relationshipLabel>
    <relationshipName>Map_Member_Users</relationshipName>
    <type>Lookup</type>
</CustomField>