default/objects/Map_Member_User__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Map Member Users</relationshipLabel>
    <relationshipName>Map_Member_Users</relationshipName>
    <type>Lookup</type>
</CustomField>